--- a/ShopApp/Views/Home/Index.cshtml
+++ b/ShopApp/Views/Home/Index.cshtml
@@ -1,1 +1,13 @@
-﻿
+﻿@model HomeViewModel
+
+
+
+<h1>Любимые автомобили</h1>
+<div class="row mt-5 mb-2">
+    @{
+        foreach (Car car in Model.favCars)
+        {
+            @Html.Partial("AllCars", car)
+        }
+    }
+</div>
