--- a/ShopApp/Views/Shared/_Layout.cshtml
+++ b/ShopApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,13 @@
                         <a class="nav-link" href="/">Главная </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Про нас</a>
+                        <a class="nav-link" href="/Cars/List">Все машины</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Cars/List/Electro">Электромобили</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Cars/List/Fuel">Бензиновые</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/ShopCart/">Корзина</a>
