--- a/ShopApp/Views/ShopCart/Index.cshtml
+++ b/ShopApp/Views/ShopCart/Index.cshtml
@@ -11,5 +11,5 @@
         }
     }
     <hr />
-    <div class="btn btn-danger" asp-controller="Order">Оплатить</div>
+    <a class="btn btn-danger" asp-controller="Order" asp-action="Checkout">Оплатить</a>
 </div>
